gitops/infra/container-registry/cluster-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
spec:
  ingressClassName: traefik
  rules:
    - host: $(REGISTRY_HOST)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
